# ForeignFunctionInterface

./: .gitignore  .gitmodules  CICD.nb  CMakeLists.txt  ChristopherWolfram__ForeignFunctionInterface-1.0.0.paclet
.github/workflows/: Build.yml  Check.yml  build.yml
CExperiments/: libffiExample  libffiExample.c  scratchSpace  scratchSpace.c
ForeignFunctionInterface/: PacletInfo.wl  ResourceDefinition.nb
ForeignFunctionInterface/Documentation/English/Guides/: ForeignFunctionInterface.nb
ForeignFunctionInterface/Documentation/English/ReferencePages/Symbols/: BufferToList.nb  BufferToNumericArray.nb  BufferToString.nb  CallForeignFunction.nb  CreateBuffer.nb  CreateCallback.nb  CreateForeignFunction.nb  CreateManagedExpression.nb  DeleteBuffer.nb  DeleteCallback.nb  DereferenceBuffer.nb  FFIType.nb  ForeignFunction.nb  FreeBuffer.nb  GetManagedExpression.nb  ListToBuffer.nb  NumericArrayToBuffer.nb  OpaqueRawPointer.nb  PopulateBuffer.nb  StringToBuffer.nb
ForeignFunctionInterface/Documentation/English/Tutorials/: CreatingALinkToSQLite.nb  CreatingALinkToSQLiteWithTheForeignFunctionInterfacePaclet.nb  FFITypes.nb
ForeignFunctionInterface/Kernel/: BaseTypeConversion.wl  Buffer.wl  CArray.wl  ExternalLibrary.wl  ForeignFunction.wl  ForeignFunctionInterface.wl  ManagedExpression.wl  Messages.wl  OpaqueRawPointer.wl  RawObject.wl  RawPointer.wl
ForeignFunctionInterface/Kernel/LibFFI/: Base.wl  BaseTypes.wl  CallForeignFunction.wl  Callback.wl  Constants.wl  CreateForeignFunction.wl  ExpressionConversion.wl  FFIType.wl  InterfaceLibrary.wl  LibFFI.wl  RawFunctionLoading.wl
ForeignFunctionInterface/LibraryResources/MacOSX-x86-64/: ForeignFunctionInterface.dylib
LibFFIInterface/: libFFIInterface.c  libFFIInterface.dylib  libFFITests.c  test
LibFFIInterface/experiments/: argumentTest.c  stackBuffersError  stackBuffersError.c
ffiConstants/: ffiConstants.c
notes/: 2023-01-30.nb  2023-02-01.nb  cppLinking-1.nb  ffi-1.nb  libffi-1.nb
scripts/: BuildForeignFunctionInterfaceLibrary.wl  cvs.cmake  re_build_ForeignFunctionInterface.xml  wl.cmake
